# scratch

./: pyproject.toml
src/: main.py
tests/: test_books.py  test_libraries.py
