[project]
name = "scratch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
    {name = "", email = "mark@marknorman.com"},
]
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "pydantic>=2.12.5",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve = "uvicorn src.main:app --reload"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]
